# Farsi-OCR

./: .env.example  .gitignore  DEVELOPER.md  README.md  pyproject.toml  requirements.txt  run_example.sh  run_pipeline_sample.sh
farsi_book_ocr/: cache.py  check_install.py  correct_text.py  correction.py  extract_pages.py  extract_text.py  metrics.py  models.py  normalize_text.py  ocr_book.py  page_splitter.py  validator.py
farsi_book_ocr/prompts/: ocr_correction_v1.txt
farsi_book_ocr/providers/: base.py  deepseek.py  fake.py
sample-output/: book_normalized.txt  book_ocr.corrected.txt  book_ocr.txt
tests/: conftest.py  test_cache.py  test_correct_text.py  test_correction_pipeline.py  test_normalize_text.py  test_ocr_book.py  test_page_splitter.py  test_providers.py  test_staged_normalization.py  test_validator.py
